# vmdkShell

./: .gitignore  LICENSE  README.md  analyze_vmdk.py  base_analyze.py  const_define.py  pyproject.toml  test.py  vmdk_shell.py  vmdk_shell_cli.py  vmdk_shell_ops.py  文件系统相关.md
crypto_state/: __init__.py  base.py  luks.py  luks_volume.py  lvm.py  registry.py
filesystems/: extfs.py  squashfs.py  ufs.py
partitions/: bsdpartition.py  gptpartition.py  mbrpartition.py
tests/: test_container_probe.py  test_shell_ls.py
tools/: __init__.py  file_tool.py  magic_engine.py  readelf_tool.py  registry.py
vmdkshell_tools/: base.py  dd_tool.py  elf.py  file_tool.py  hexdump_tool.py  source_utils.py
